--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <div id='root'>
   </div>
 
+  <script src="https://checkout.stripe.com/checkout.js"></script>
   <script src="/static/bundle.js"></script>
 </body>
 </html>
